--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="index.html" class="scrollto">PEMIRA PNC<img src="assets/img/logo.png" alt="" title=""></a>
+        <a href="index.html" class="scrollto">PEMIRA PNC <img src="assets/img/logo.png" alt="" title=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#speakers">Paslon</a></li>
-          <li><a class="nav-link scrollto" href="#schedule">TimeLine</a></li>
+          <li><a class="nav-link scrollto" href="#schedule">Timeline</a></li>
           <li><a class="nav-link scrollto" href="#venue">Venue</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -75,7 +75,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#login">Login</a>
+      <a class="buy-tickets scrollto" href="http://pemira.protic.web.id/login">Login</a>
 
     </div>
   </header><!-- End Header -->
@@ -86,7 +86,7 @@
       <h1 class="mb-4 pb-0">PEMIRA<br><span>POLITEKNIK NEGERI CILACAP</span><br>2022/2023</h1>
       <p class="mb-4 pb-0">24 November 2022, Politeknik Negeri Cilacap, Jawa Tengah</p>
       <a href="https://www.youtube.com/watch?v=vRzTUrI28AI&ab_channel=PEMIRAPNCOfficial" class="glightbox play-btn mb-4"></a>
-      <a href="#about" class="about-btn scrollto">About The Event</a>
+      <a href="#about" class="about-btn scrollto">About PEMIRA</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -97,7 +97,7 @@
       <div class="container" data-aos="fade-up">
       <div class="row">
           <div class="col-lg-6">
-            <h2>About The Event</h2>
+            <h2>About PEMIRA</h2>
             <p>Pemira adalah sebuah mekanisme yang dijalankan satu kali dalam satu periode kepengurusan dalam rangka memilih Ketua dan Wakil Ketua BPM dan BEM 
               yang diatur dalam KUHK Politeknik Negeri Cilacap yang diketahui dan dilaksanakan oleh seluruh Mahasiswa Aktif Politeknik Negeri Cilcap.</p>
           </div>
@@ -224,8 +224,8 @@
     <section id="schedule" class="section-with-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Time Line</h2>
-          <p>Here is our event schedule</p>
+          <h2>TimeLine</h2>
+          <p>Here is our Pemira schedule</p>
         </div>
 
        <!-- <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
@@ -463,6 +463,34 @@
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/4.jpg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/4.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/img/gallery/gbr1.jpeg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/gallery/gbr1.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/img/gallery/gbr3.jpeg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/gallery/gbr3.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/img/gallery/gbr2.jpeg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/gallery/gbr2.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/img/gallery/gbr4.jpeg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/gallery/gbr4.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -846,7 +874,7 @@
             <div class="contact-email">
               <i class="bi bi-instagram"></i>
               <h3>Instagram</h3>
-              <p><a href="https://www.instagram.com/pemira.pnc/">Pemira.PNC</a></p>
+              <p><a href="https://www.instagram.com/pemira.pnc/">pemira.pnc</a></p>
             </div>
           </div>
 
@@ -895,13 +923,15 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Link Menu</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#about">About</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#speakers">Paslon</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#schedule">Timeline</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#venue">Venue</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#gallery">Gallery</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact</a></li>
             </ul>
           </div>
 
@@ -915,10 +945,8 @@
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/pemira.pnc/" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="facebook"><i class="bi bi-facebook"></i></a>
             </div>
 
           </div>
@@ -938,13 +966,22 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
       -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      <div class="text-center">
+        Made by <a href="#">Kelompok 5</a>
+      </div>
       </div>
     </div>
   </footer><!-- End  Footer -->
-
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+  <div class="group-contact">
+    <a href="https://wa.me/+6281381531322/?text=Assalamualaikum%20kak,%20Saya%20mau%20tanya-tanya%20PEMIRA"
+     class="contact-one d-flex align-items-center justify-content-center">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+    <a href="https://wa.me/+62895371077523/?text=Assalamualaikum%20kak,%20Saya%20mau%20tanya-tanya%20PEMIRA" class="contact-two d-flex align-items-center justify-content-center">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+  </div>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
